--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,6 @@
 {
     "params": {
-        "mailto": "yourmailaddress@gmail.com",
+        "mailto": "yourmailaddress1@gmail.com",
         "request_interval": 1,
         "max_requests": 1000000,
         "db_file": "Articles.db",
